# statewave

./: .dockerignore  .env.example  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSING.md  NOTICE.md  README.md  SECURITY.md  TRADEMARKS.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  start.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  docs_issue.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_last_compiled_at.py  0003_add_embedding_index.py  0004_embedding_as_text.py  0005_webhook_events.py  0006_add_subject_snapshots.py  0007_add_compile_jobs.py  0008_add_tenant_id_columns.py  0009_add_rate_limit_table.py  0010_add_session_id.py  0011_add_resolutions_table.py  0012_add_health_cache.py  0013_pgvector_native.py  0014_query_embedding_cache.py
docs/: licensing.md  memory-portability.md
infra/postgres-pgvector/: Dockerfile  README.md
scripts/: bootstrap_docs_pack.py  bootstrap_snapshots.py  build_support_pack.py  docs_loader.py  preflight.py  seed_demo_subjects.py
server/: app.py  main.py
server/api/: admin.py  context.py  episodes.py  handoff.py  health.py  llm.py  memories.py  resolutions.py  sla.py  subjects.py  timeline.py
server/core/: auth.py  config.py  dependencies.py  errors.py  logging.py  ratelimit.py  (+3 more)
tests/: conftest.py  test_admin_clone.py  test_admin_dashboard.py  test_admin_memory.py  test_admin_purge.py  test_admin_subjects.py  test_api_llm.py  test_backup.py  test_batch_episodes.py  test_compile_jobs_durable.py  test_compiler.py  test_compilers.py  test_conflicts.py  test_context.py  test_docs_loader.py  test_embeddings.py  test_embeddings_backfill.py  test_handoff.py  test_health.py  test_health_alerts.py  test_llm_adapter_isolation.py  test_llm_compiler.py  test_middleware.py  test_migrations.py  test_query_cache.py  test_ratelimit.py  test_readiness.py  test_repeat_issue.py  test_resolutions.py  test_session_context.py  test_sla.py  test_snapshots.py  test_support_ranking.py  test_tenant.py  test_tenant_scoping.py  test_usage.py  test_webhooks.py
(+64 files in other folders)
