[project]
name = "statewave"
version = "0.7.1"
description = "Memory OS — trusted context runtime for AI agents and applications"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "pgvector>=0.3,<1",
    "tiktoken>=0.7,<1",
    "structlog>=24.1,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.23,<2",
    "httpx>=0.27,<1",
    "ruff>=0.4,<1",
]
llm = [
    "litellm>=1.40,<2",
]
otel = [
    "opentelemetry-api>=1.24,<2",
    "opentelemetry-sdk>=1.24,<2",
    "opentelemetry-exporter-otlp>=1.24,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
